feat: 기능 및 롤-리소스 캐시 & 커스텀 캐시 추가 - roleUid 로 가질 수 있는 Resource List 불러오기